[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qmdec"
version = "0.1.0"
description = "QQ Music musicex v1 offline decryptor"
requires-python = ">=3.10"
dependencies = ["music-tag>=0.4.3", "Pillow>=9.0"]

[project.scripts]
qmdec = "qmdec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qmdec"]
